Fix button sizing for Firefox to avoid text overflow

--- a/src/public/assets/css/app.css
+++ b/src/public/assets/css/app.css
@@ -487,7 +487,7 @@ button:active {
 }
 
 .send-data {
-    width: 70px;
+    width: 75px;
 }
 .new-data {
     width: 70px;
